--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- TopBar starts -->
     <nav class="topbar">
         <div class="row">
-            <div class="col-md-4 text-center"><span class=""><img src="./assets/message.png" alt=""> Email: arthurphil-h.school@det.nsw.edu.au</span> </div>
-            <div class="col-md-4 text-center"> <img src="./assets/phone.png" alt="">+61 288 558 100</div>
-            <div class="col-md-4 text-center"><img src="./assets/location-pin.png" alt="">Macquarie St, Parramatta, Australia</div>
+            <div class="col-md-4 text-center"><span class=""><img src="assets/message.png" alt=""> Email: arthurphil-h.school@det.nsw.edu.au</span> </div>
+            <div class="col-md-4 text-center"> <img src="assets/phone.png" alt="">+61 288 558 100</div>
+            <div class="col-md-4 text-center"><img src="assets/location-pin.png" alt="">Macquarie St, Parramatta, Australia</div>
         </div>
    </nav>
    <!-- Top bar ends -->
@@ -28,11 +28,11 @@
    
     <nav class="navbar">
         <div class="logo">
-          <img src="/assets/logo.png" alt="Logo" />
+          <img src="assets/logo.png" alt="Logo" />
         </div>
         <ul class="nav-menu">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="/characters.html">Characters</a></li>
+          <li><a href="characters.html">Characters</a></li>
           <li><a href="howtoplay.html">What it takes</a></li>
         </ul>
       </nav>
@@ -83,7 +83,7 @@
         </p>
         <div class="audio">
             <audio id="subway-audio">
-                <source src="/assets/subway-theme.mp3" type="audio/mp3">
+                <source src="assets/subway-theme.mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
             
