--- a/howtoplay.html
+++ b/howtoplay.html
@@ -16,9 +16,9 @@
      <!-- TopBar starts -->
      <nav class="topbar">
         <div class="row">
-            <div class="col-md-4 text-center"><span class=""><img src="./assets/message.png" alt=""> Email: arthurphil-h.school@det.nsw.edu.au</span> </div>
-            <div class="col-md-4 text-center"> <img src="./assets/phone.png" alt="">+61 288 558 100</div>
-            <div class="col-md-4 text-center"><img src="./assets/location-pin.png" alt="">Macquarie St, Parramatta, Australia</div>
+            <div class="col-md-4 text-center"><span class=""><img src="assets/message.png" alt=""> Email: arthurphil-h.school@det.nsw.edu.au</span> </div>
+            <div class="col-md-4 text-center"> <img src="assets/phone.png" alt="">+61 288 558 100</div>
+            <div class="col-md-4 text-center"><img src="assets/location-pin.png" alt="">Macquarie St, Parramatta, Australia</div>
         </div>
    </nav>
    <!-- Top bar ends -->
@@ -29,11 +29,11 @@
    
     <nav class="navbar">
         <div class="logo">
-          <img src="/assets/logo.png" alt="Logo" />
+          <img src="assets/logo.png" alt="Logo" />
         </div>
         <ul class="nav-menu">
           <li ><a href="index.html">Home</a></li>
-          <li ><a href="/characters.html">Characters</a></li>
+          <li ><a href="characters.html">Characters</a></li>
           <li class="active"><a href="howtoplay.html">Be A Pro</a></li>
         </ul>
       </nav>
