--- a/characters.html
+++ b/characters.html
@@ -16,9 +16,9 @@
     <!-- TopBar starts -->
     <nav class="topbar">
         <div class="row">
-            <div class="col-md-4 text-center"><span class=""><img src="./assets/message.png" alt=""> Email: arthurphil-h.school@det.nsw.edu.au</span> </div>
-            <div class="col-md-4 text-center"> <img src="./assets/phone.png" alt="">+61 288 558 100</div>
-            <div class="col-md-4 text-center"><img src="./assets/location-pin.png" alt="">Macquarie St, Parramatta, Australia</div>
+            <div class="col-md-4 text-center"><span class=""><img src="assets/message.png" alt=""> Email: arthurphil-h.school@det.nsw.edu.au</span> </div>
+            <div class="col-md-4 text-center"> <img src="assets/phone.png" alt="">+61 288 558 100</div>
+            <div class="col-md-4 text-center"><img src="assets/location-pin.png" alt="">Macquarie St, Parramatta, Australia</div>
         </div>
    </nav>
    <!-- Top bar ends -->
@@ -29,7 +29,7 @@
    
     <nav class="navbar">
         <div class="logo">
-          <img src="/assets/logo.png" alt="Logo" />
+          <img src="assets/logo.png" alt="Logo" />
         </div>
         <ul class="nav-menu">
           <li ><a href="index.html">Home</a></li>
@@ -47,7 +47,7 @@
         <div class="row">
            <div class="col-md-2"></div>
             <div class="col-md-3 jake-img">
-                <img src="/assets/Jake.webp" alt="">
+                <img src="assets/Jake.webp" alt="">
 
             </div>
             <div class="col-md-6 jake-body">
@@ -91,7 +91,7 @@
 
             </div>
             <div class="col-md-3 jake-img">
-                <img src="/assets/tricky.webp" alt="">
+                <img src="assets/tricky.webp" alt="">
 
             </div>
             <div class="col-md-1"></div>
@@ -104,7 +104,7 @@
         <div class="row">
            <div class="col-md-2"></div>
             <div class="col-md-3 fresh-img">
-                <img src="/assets/Fresh.webp" alt="">
+                <img src="assets/Fresh.webp" alt="">
 
             </div>
             <div class="col-md-6 fresh-body">
@@ -151,7 +151,7 @@
 
             </div>
             <div class="col-md-3 yutani-img">
-                <img src="/assets/Yutani.webp" alt="">
+                <img src="assets/Yutani.webp" alt="">
 
             </div>
             <div class="col-md-1"></div>
